# fus-detectors

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LATENCY_OPTIMIZATION_SPEC.md  Makefile  README.md  SECURITY.md  appendix_bundle_schema.tex  appendix_ka_contract_theory.tex  appendix_repro_manifest.tex  appendix_supp_results.tex  build_context.sh  environment.yml  package-lock.json  package.json  provisional_patent_draft_specification.md  provisional_patent_outline.md  pymust_spec.txt  pyproject.toml  repro_manifest.json  stap_fus_methodology.tex  stap_fus_paper.tex  stap_fus_supplement.tex  tmp_ratio_current.py  tmp_ratio_mix.py  zenodo_10711806.json
configs/: calib_evt.yaml  confirm2.yaml  default.yaml  ka_score_model_brain_clinical_pd.json  ka_score_model_habv3_clinical_pd.json  refactor_verify_thresholds.json  sims_r1.yaml  sims_r2.yaml
docs/: PUBLIC_RELEASE_CHECKLIST.md  data_download.md  final_artifact_index.md  git-info-exclude.sample  integration.md  physical_doppler_sim.md  pymust_simus_clin_plan.md  simulation_spec_plan.md  simus_clinutility_v2_plan.md  troubleshooting.md
eval/: acceptance.py  acceptance_cli.py  aggregate.py  evd.py  metrics.py  stress_suite.py  summary_pdf.py  sweep_mc.py
examples/: minimal_integration.py  svd_pipeline_readout_swap.py
figs/: fig1_before_after.py  fig2_roc_calibrated.py  fig3_confirm2_curve.py  fig4_latency_angle_trade.py  fig5_ablation_bars.py  fig6_telemetry_rank.py
fus_detectors/: __init__.py  adaptive.py  api.py  defaults.py
notebooks/: colab_play.ipynb
paper/: README.md  appendix_bundle_schema.tex  appendix_ka_contract_theory.tex  appendix_repro_manifest.tex  appendix_supp_results.tex  manuscript.tex  methods_companion.tex  preprint.tex  stap_fus_methodology.tex  stap_fus_paper.tex  stap_fus_supplement.tex  supplement.tex
patent/: .gitignore  build_patent_bundle.py  generate_patent_figures.py  provisional_application_package.tex  provisional_cover_information.tex  provisional_drawings.tex  provisional_submission_checklist.md  provisional_submission_checklist.tex
reports/: accepted_v2_structural_main_table.tex  adaptive_tau_sensitivity_table.tex  brain_huber_trim_stability_table.tex  detector_family_policy_table.tex  (+21 more)
(+526 files in other folders)
