[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
# Some environments ship an old `attrs` that breaks Hypothesis import, which in
# turn can make `pytest` exit non-zero during terminal summary even when tests
# pass. We don't rely on Hypothesis in this repo, so disable its plugin.
addopts = "-p no:hypothesispytest"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
